Added Beam Search Decoder

--- a/model.ipynb
+++ b/model.ipynb
@@ -17,7 +17,8 @@
     "import torch.optim as optim\n",
     "import torch.utils.data as data\n",
     "import torchaudio\n",
-    "from comet_ml import Experiment"
+    "from comet_ml import Experiment\n",
+    "from ctcdecode import CTCBeamDecoder"
    ]
   },
   {
@@ -60,8 +61,8 @@
     {
      "data": {
       "text/plain": [
-       "(<torchaudio.datasets.librispeech.LIBRISPEECH at 0x7f15df11c160>,\n",
-       " <torchaudio.datasets.librispeech.LIBRISPEECH at 0x7f15e0195f70>)"
+       "(<torchaudio.datasets.librispeech.LIBRISPEECH at 0x7efcf46018b0>,\n",
+       " <torchaudio.datasets.librispeech.LIBRISPEECH at 0x7efcf468f220>)"
       ]
      },
      "execution_count": 4,
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -691,15 +692,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Greedy Decoder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def GreedyDecoder(output, labels, label_lengths, blank_label=BLANK_LABEL, collapse_repeated=True):\n",
+    "    output = F.log_softmax(output, dim=2)\n",
+    "\n",
     "    arg_maxes = torch.argmax(output, dim=2)\n",
     "    decodes = []\n",
     "    targets = []\n",
+    "    \n",
     "    for i, args in enumerate(arg_maxes):\n",
     "        decode = []\n",
     "        targets.append(text_transform.int_to_text(labels[i][:label_lengths[i]].tolist()))\n",
@@ -718,7 +730,57 @@
     "                decode.append(index.item())\n",
     "        \n",
     "        decodes.append(text_transform.int_to_text(decode))\n",
+    "\n",
     "    return decodes, targets"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Beam Search Decoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "characters = list(text_transform.char_map.keys())\n",
+    "\n",
+    "beam_decoder = CTCBeamDecoder(\n",
+    "    labels=characters,\n",
+    "    cutoff_top_n=len(characters),   # do not discard any characters from beam search\n",
+    "    cutoff_prob=1.0,    # cutoff probability in pruning (1.0 means no pruning)\n",
+    "    beam_width=100,\n",
+    "    num_processes=4,\n",
+    "    blank_id=28,\n",
+    "    log_probs_input=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def BeamSearchDecoder(output):\n",
+    "    top_beams = []\n",
+    "    decodings = []\n",
+    "\n",
+    "    beam_results, beam_scores, timesteps, out_lens = beam_decoder.decode(output)\n",
+    "    \n",
+    "    for i in range(len(beam_results)):\n",
+    "        top_beam = beam_results[i][0][:out_lens[i][0]]\n",
+    "        decoding = text_transform.int_to_text(top_beam.tolist())\n",
+    "\n",
+    "        top_beams.append(top_beam)\n",
+    "        decodings.append(decoding)\n",
+    "        \n",
+    "    return top_beams, decodings"
    ]
   },
   {
@@ -731,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,57 +1137,84 @@
     "    model.eval()\n",
     "\n",
     "    output = model(spectrogram)\n",
-    "    output = F.log_softmax(output, dim=2)\n",
     "\n",
-    "    pred, label = GreedyDecoder(output, label, label_length, collapse_repeated=collapse_repeated)\n",
-    "\n",
-    "    print(f\"Probabilities matrix shape: {output.shape}\")\n",
-    "    print(f\"Greedy decoding indices:\\n{torch.argmax(output, dim=2)}\")\n",
+    "    greedy_pred, label = GreedyDecoder(output, label, label_length, collapse_repeated=collapse_repeated)\n",
+    "    beams, beam_preds = BeamSearchDecoder(output)\n",
+    "    \n",
+    "    print(f\"Negative log likelihood matrix shape: {output.shape}\")\n",
+    "    print(\"\\nGREEDY DECODING\")\n",
+    "    print(f\"Decoded indices:\\n{torch.argmax(output, dim=2)}\")\n",
     "    print()\n",
-    "    print(f\"Target: {label}\")\n",
-    "    print(f\"Prediction: {pred}\")"
+    "    print(f\"Target (len {len(label[0])}): {label}\")\n",
+    "    print(f\"Prediction (len {len(greedy_pred[0])}): {greedy_pred}\")\n",
+    "\n",
+    "    print(\"\\nBEAM SEARCH DECODING\")\n",
+    "    print(f\"Top beam:\\n{beams}\")\n",
+    "    print()\n",
+    "    print(f\"Target (len {len(label[0])}): {label}\")\n",
+    "    print(f\"Prediction (len {len(beam_preds[0])}): {beam_preds}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probabilities matrix shape: torch.Size([1, 358, 28])\n",
-      "Greedy decoding indices:\n",
-      "tensor([[ 1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
-      "          1,  1,  1,  1, 16,  7,  1,  1,  1,  1,  1,  1, 21,  9, 10, 20,  1,  1,\n",
-      "          1,  1,  1,  1, 20,  6,  4,  1,  1, 16, 16, 15,  5,  1,  1,  1,  1,  1,\n",
-      "         13,  6, 21, 21,  1, 21,  6, 19,  1,  1,  1,  1,  1,  1,  1,  2,  2, 13,\n",
-      "          1,  1,  1,  1,  1,  1,  1, 20, 16,  1,  1,  1,  1,  1, 20, 20,  9,  6,\n",
-      "          1,  1,  1,  1,  1,  1,  1,  1, 20, 17, 16, 12, 12,  6,  1,  1,  1,  1,\n",
-      "          1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  2,  2, 15,  5,\n",
-      "          1,  1,  1,  1,  1,  1,  1, 21, 16, 13, 13,  1,  1,  1,  1,  1, 14,  6,\n",
-      "          1,  1,  1,  1,  1, 21,  9,  2, 21,  1,  1,  1, 10, 21,  1,  1,  1,  4,\n",
-      "          4, 16, 15,  1,  1,  1, 21,  2, 10, 10, 15,  6,  5,  1,  1,  1,  1,  2,\n",
-      "         15,  1,  1,  1,  1, 10, 15, 15,  1,  1,  1,  1, 23, 10,  1,  1,  1, 21,\n",
-      "          2,  2, 21,  1,  1, 10, 16, 15,  1,  1,  1,  1,  1,  1,  7, 16, 19,  1,\n",
-      "          1,  1,  9,  6, 19,  1,  1,  1,  1, 21, 16,  1,  1,  1,  1,  3,  6,  1,\n",
-      "          1,  1,  1, 21, 16,  1,  1,  1,  1, 20,  6,  1,  1,  1,  1,  1, 21,  9,\n",
-      "          6,  1,  1,  1,  1,  1,  1,  1, 17, 16, 16,  1,  1,  6, 21,  1,  1,  1,\n",
-      "          1,  1,  1,  1,  1,  1,  1, 10,  7,  1,  1,  1,  1,  1,  1,  1,  6, 23,\n",
-      "          6, 19,  1,  1,  1,  1,  1,  1, 20,  9,  6,  6,  1,  1,  1,  1, 23, 10,\n",
-      "         20,  1,  1,  1, 10, 21,  1,  1,  6,  5,  1,  1,  1,  1, 21,  9,  6,  1,\n",
-      "          1,  1, 13, 13,  2, 12,  6, 20, 20,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
-      "          1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1]],\n",
+      "Negative log likelihood matrix shape: torch.Size([1, 396, 28])\n",
+      "\n",
+      "GREEDY DECODING\n",
+      "Decoded indices:\n",
+      "tensor([[ 1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1, 24,  6,\n",
+      "         13, 13,  1, 13,  1,  1,  1,  1,  1,  1,  1,  1,  1,  2,  1,  1,  1,  1,\n",
+      "          1,  1,  1,  4, 16, 16, 15,  1,  1,  1,  1,  1, 21,  7, 10, 20,  1,  4,\n",
+      "          6,  5,  1,  1,  1, 21,  1,  2, 21,  1,  1,  1, 21,  9,  6,  1,  1,  1,\n",
+      "          1,  1,  1,  3, 16,  2, 16,  5,  1,  1,  6,  5,  1,  1,  1,  1,  1, 22,\n",
+      "         17,  1,  1,  1,  1,  1,  1,  1,  1,  9, 16, 22,  1, 20,  6,  1,  1,  1,\n",
+      "          1,  1,  1,  1,  1, 14, 26, 20, 20,  1,  1,  1, 21, 21, 19, 19, 26,  1,\n",
+      "          1, 20,  1,  1,  1,  1,  1,  1,  1,  9,  2, 17,  1,  1, 17, 17,  6, 15,\n",
+      "          6,  5,  1,  1,  1,  1,  1,  1,  1, 15, 15, 16, 21,  1,  1,  1,  1,  1,\n",
+      "          1,  1,  2, 19, 19,  1,  1,  1, 13,  1, 13, 10,  1,  2, 19,  1,  1,  1,\n",
+      "          1,  1, 21,  9,  2, 15,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+      "          1,  2,  2,  1,  1,  1, 17,  6, 19, 16, 13,  1,  1,  1,  1,  1,  1,  1,\n",
+      "         20, 10,  1,  6, 25,  1,  1,  1,  1,  1,  1,  1,  1, 21,  6,  1,  6,  6,\n",
+      "         21, 21,  9,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+      "          1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1, 22,  1,  1, 21, 21,\n",
+      "          2,  1,  6, 15, 15,  1,  1,  1,  1,  1,  1, 20,  2, 10, 25, 25,  1,  1,\n",
+      "          1,  1,  1, 21,  6,  1,  6, 15,  1,  1,  1,  1,  1, 16, 16, 15, 15,  6,\n",
+      "          1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  2, 15,  5,  1,\n",
+      "          1,  1,  1,  1,  1,  1,  1,  1, 17, 19, 16,  3,  3,  2,  2,  1,  1,  1,\n",
+      "         13, 13, 26,  1,  1,  1,  1,  1,  1,  1,  1, 15, 16, 21,  1,  1,  1,  1,\n",
+      "          1,  1,  1,  1, 14, 22,  4,  9,  9,  1,  1,  1,  1,  1,  1,  1,  1, 13,\n",
+      "          6,  2,  2,  5,  1,  6,  6,  6,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1]],\n",
       "       device='cuda:0')\n",
       "\n",
-      "Target: ['of this second letter also she spoke and told me that it contained an invitation for her to go and see the poet if ever she visited the lakes']\n",
-      "Prediction: ['of this second letter al so she spoke and tol me that it con tained an in vi tation for her to be to se the poet if ever she vis ited the lakes']\n"
+      "Target (len 141): [\"well i'm convinced that the boarded up house mystery happened not earlier than april sixteenth eighteen sixty one and probably not much later\"]\n",
+      "Prediction (len 146): ['well a con tfisced tat the boaoded up house mys trys happened not ar lliar than a perol siex teeth utaen saix teen one and proba ly not much leade']\n",
+      "\n",
+      "BEAM SEARCH DECODING\n",
+      "Top beam:\n",
+      "[tensor([ 1, 24,  6, 13,  1, 13,  1,  2,  1,  4, 16, 15,  1, 21,  7, 10, 20,  1,\n",
+      "         4,  6,  5,  1, 21,  1,  2, 21,  1, 21,  9,  6,  1,  3, 16,  2, 16,  5,\n",
+      "         1,  6,  5,  1, 22, 17,  1,  9, 16, 22,  1, 20,  6,  1, 14, 26, 20,  1,\n",
+      "        21, 19, 26,  1, 20,  1,  9,  2, 17,  1, 17,  6, 15,  6,  5,  1, 15, 16,\n",
+      "        21,  1,  2, 19,  1, 13, 10,  2, 19,  1, 21,  9,  2, 15,  1,  2,  1, 17,\n",
+      "         6, 19, 13,  1, 20, 10,  1,  6, 25,  1, 21,  6,  1,  6, 21,  9,  1, 22,\n",
+      "         1, 21,  2,  1,  6, 15,  1, 20,  2, 10, 25,  1, 21,  6,  1,  6, 15,  1,\n",
+      "        16, 15,  6,  1,  2, 15,  5,  1, 17, 19, 16,  3,  2,  1, 13, 26,  1, 15,\n",
+      "        16, 21,  1, 14, 22,  4,  9,  1, 13,  6,  2,  5,  1,  6, 19,  1],\n",
+      "       dtype=torch.int32)]\n",
+      "\n",
+      "Target (len 141): [\"well i'm convinced that the boarded up house mystery happened not earlier than april sixteenth eighteen sixty one and probably not much later\"]\n",
+      "Prediction (len 158): ['wel l a con tfis ced t at the boaod ed up hou se mys try s hap pened not ar liar than a perl si ex te eth u ta en saix te en one and proba ly not much lead er']\n"
      ]
     }
    ],
    "source": [
-    "infer(1000, model_loaded, collapse_repeated=True)"
+    "infer(2000, model_loaded, collapse_repeated=True)"
    ]
   },
   {
