Resolved merge conflict while reverting to the old commit

--- a/model.ipynb
+++ b/model.ipynb
@@ -1341,7 +1341,7 @@
     "\ttorch.save(model.state_dict(), model_path)\n",
     "\n",
     "\twith open(hparams_path, 'w') as f:\n",
-    "\t\tjson.dump(hparams, f)"
+    "\t\tjson.dump(hparams, f)\n"
    ]
   },
   {
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
