Added sample loading from file

--- a/model.ipynb
+++ b/model.ipynb
@@ -1156,14 +1156,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def infer(sample_idx: int, model, collapse_repeated: bool=True):\n",
+    "def infer(model,\n",
+    "          sample_idx: int = None,\n",
+    "          sample_path: int = None,\n",
+    "          collapse_repeated: bool=True):\n",
     "    device, _ = get_device()\n",
+    "\n",
+    "    if sample_path is not None:\n",
+    "        waveform, _ = torchaudio.load(sample_path)\n",
+    "        sample = (waveform, _, \"<INFERENCE_SAMPLE>\", _, _)\n",
+    "    elif sample_idx is not None:\n",
+    "        sample = test_dataset.__getitem__(n=sample_idx)\n",
+    "\n",
     "    spectrogram, label, input_length, label_length = \\\n",
-    "        data_processing((test_dataset.__getitem__(n=sample_idx),))\n",
+    "        data_processing((sample,))\n",
     "    spectrogram, label = spectrogram.to(device), label.to(device)\n",
     "\n",
     "    model.eval()\n",
@@ -1189,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1256,7 @@
     }
    ],
    "source": [
-    "infer(2000, model_loaded, collapse_repeated=True)"
+    "infer(model_loaded, sample_idx=2000, collapse_repeated=True)"
    ]
   },
   {
