--- a/model.ipynb
+++ b/model.ipynb
@@ -1163,12 +1163,12 @@
     "def infer(model,\n",
     "          sample_idx: int = None,\n",
     "          sample_path: int = None,\n",
-    "          collapse_repeated: bool=True):\n",
+    "          collapse_repeated: bool = True):\n",
     "    device, _ = get_device()\n",
     "\n",
     "    if sample_path is not None:\n",
     "        waveform, _ = torchaudio.load(sample_path)\n",
-    "        sample = (waveform, _, \"<INFERENCE_SAMPLE>\", _, _)\n",
+    "        sample = (waveform, None, \"<INFERENCE_SAMPLE>\", None, None, None)\n",
     "    elif sample_idx is not None:\n",
     "        sample = test_dataset.__getitem__(n=sample_idx)\n",
     "\n",
@@ -1195,6 +1195,29 @@
     "    print()\n",
     "    print(f\"Target (len {len(label[0])}): {label}\")\n",
     "    print(f\"Prediction (len {len(beam_preds[0])}): {beam_preds}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 6, got 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb Cell 45\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m infer(model_loaded, sample_path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mdata/sample.wav\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;32m/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb Cell 45\u001b[0m in \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39melif\u001b[39;00m sample_idx \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     sample \u001b[39m=\u001b[39m test_dataset\u001b[39m.\u001b[39m\u001b[39m__getitem__\u001b[39m(n\u001b[39m=\u001b[39msample_idx)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m spectrogram, label, input_length, label_length \u001b[39m=\u001b[39m \\\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     data_processing((sample,))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m spectrogram, label \u001b[39m=\u001b[39m spectrogram\u001b[39m.\u001b[39mto(device), label\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m model\u001b[39m.\u001b[39meval()\n",
+      "\u001b[1;32m/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb Cell 45\u001b[0m in \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m input_lengths \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m label_lengths \u001b[39m=\u001b[39m []\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m (waveform, _, utterance, _, _, _) \u001b[39min\u001b[39;00m data:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mif\u001b[39;00m data_type \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/pigeon_gcc/Desktop/speech-recognition/model.ipynb#Y634sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         spec \u001b[39m=\u001b[39m train_audio_transforms(waveform)\u001b[39m.\u001b[39msqueeze(\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mtranspose(\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 6, got 5)"
+     ]
+    }
+   ],
+   "source": [
+    "infer(model_loaded, sample_path='data/sample.wav')"
    ]
   },
   {
@@ -1256,7 +1279,7 @@
     }
    ],
    "source": [
-    "infer(model_loaded, sample_idx=2000, collapse_repeated=True)"
+    "infer(model_loaded, sample_idx=2000)"
    ]
   },
   {
